fix(main): add marat to admin, add button and check not premission user